More of <rdar://problem/7855777> REGRESSION: Memory usage increase caused by storing glyph bounds in GlyphMetricsMap https://bugs.webkit.org/show_bug.cgi?id=37936

Reviewed by Adele Peterson.

Assigning zero width and empty bounds to the ZERO WIDTH SPACE glyph often allocates a width map
page and a bounds map page for the glyph, each of which pages contains 255 unused entries. Save
this space by not storing the zero width and empty bounds in the metrics maps.

* platform/graphics/SimpleFontData.cpp:
(WebCore::SimpleFontData::SimpleFontData): Initialize m_zeroWidthSpaceGlyph.
(WebCore::SimpleFontData::platformGlyphInit): Set m_zeroWidthSpaceGlyph. Don’t create entries
for the ZERO WIDTH SPACE glyph in the width map and in the bounds map.
* platform/graphics/SimpleFontData.h:
(WebCore::SimpleFontData::boundsForGlyph): Return empty bounds for the ZERO WIDTH SPACE glyph
without consulting the bounds map.
(WebCore::SimpleFontData::widthForGlyph): Return zero for the ZERO WIDTH SPACE glyph without
consulting the width map.



Canonical link: https://commits.webkit.org/49723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58467 268f45cc-cd09-0410-ab3c-d52691b4dbfc