WebCore/platform/graphics/SimpleFontData.h
@@ -200,6 +200,8 @@ private:
     float m_spaceWidth;
     float m_adjustedSpaceWidth;
 
+    Glyph m_zeroWidthSpaceGlyph;
+
     GlyphData m_missingGlyphData;
 
     mutable SimpleFontData* m_smallCapsFontData;
@@ -243,9 +245,13 @@ private:
 #if !PLATFORM(QT)
 ALWAYS_INLINE FloatRect SimpleFontData::boundsForGlyph(Glyph glyph) const
 {
+    if (glyph == m_zeroWidthSpaceGlyph && glyph)
+        return FloatRect();
+
     FloatRect bounds = m_glyphToBoundsMap.metricsForGlyph(glyph);
     if (bounds.width() != cGlyphSizeUnknown)
         return bounds;
+
     bounds = platformBoundsForGlyph(glyph);
     m_glyphToBoundsMap.setMetricsForGlyph(glyph, bounds);
     return bounds;
@@ -253,6 +259,9 @@ ALWAYS_INLINE FloatRect SimpleFontData::boundsForGlyph(Glyph glyph) const
 
 ALWAYS_INLINE float SimpleFontData::widthForGlyph(Glyph glyph) const
 {
+    if (glyph == m_zeroWidthSpaceGlyph && glyph)
+        return 0;
+
     float width = m_glyphToWidthMap.metricsForGlyph(glyph);
     if (width != cGlyphSizeUnknown)
         return width;
